# moodle-proctor

./: .gitignore  .tmuxinator.yml  API_DOCUMENTATION.md  BACKEND_PACKAGE_SCRIPTS.json  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  LTI_IMPLEMENTATION_STATUS.md  LTI_QUICKSTART.md  LTI_SETUP.md  LTI_STATUS.md  MOODLE_BACKEND_SETUP.md  MOODLE_NATIVE_REWRITE.md  README.md  README_DOCKER_SETUP.md  STARTUP.md  STATUS.md  TECHNICAL_ARCHITECTURE.md  TEST-EDIT-PLAN.md  TEST-EXECUTION-TODO.md  TEST-TODO.md  TESTING.md  TESTING_CI_CD_SUMMARY.md  TESTING_COMPLETE_GUIDE.md  TESTING_QUICK_REFERENCE.md  TESTING_REPORT.md  TODO-TESTING.md  TODO.md  TODOS.md  WEBRTC_IMPLEMENTATION.md  WEBRTC_QUICKSTART.md  WEBRTC_README.md  coverage.json  coverage.lcov  docker-compose.test.yml  docker-compose.yml  integration_tests.sql  package-lock.json  (+3 more)
ai_proctoring/: .dockerignore  Dockerfile  config.py  gaze_tracking.py  lighting_monitor.py  main.py  pyproject.toml  violations.jsonl
backend/: .gitignore  Dockerfile  Dockerfile.bak  README.md  TESTING_NOTES.md  database_setup.sql  jest.config.js  package.json  playwright.config.ts
dsc/: README.md  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo
frontend/: .dockerignore  Dockerfile  FRONTEND_INTEGRATION.md  jest.config.js  jest.setup.js  middleware.ts  next.config.mjs  package-lock.json  package.json
manual_proctoring/: MIGRATION_GUIDE.md  README.UPDATED.md  README.md  main.js  package-lock.json  package.json  preload.js
tests/: TESTS.md  (+6 more)
(+292 files in other folders)
