[project]
name = "ai-proctoring"
version = "3.0.0"
description = "AI Proctoring System with computer vision detectors"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core vision
    "opencv-python>=4.9.0",
    "mediapipe>=0.10.9",
    "ultralytics>=8.1.0",
    "numpy>=1.24.0",

    # Audio detection - requires system dependencies (portaudio19-dev, python3-dev)
    # "pyaudio>=0.2.14",

    # Tab/window monitoring (Windows only)
    "pywin32>=306; sys_platform == 'win32'",

    # PDF report generation
    "reportlab>=4.1.0",

    # Web framework
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "wsproto",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []

[tool.uv.sources]
